--- a/web_app.html
+++ b/web_app.html
@@ -2692,48 +2692,48 @@
                     name: '💪 Усилитель Тапа',
                     emoji: '💪',
                     items: [
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false},
-                        {level: 0, name: '💪 Усилитель Тапа', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false}
+                        {level: 0, name: '💪 Базовый Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 1000, baseEffect: 1},
+                        {level: 0, name: '💪 Улучшенный Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 2500, baseEffect: 3},
+                        {level: 0, name: '💪 Продвинутый Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 5000, baseEffect: 6},
+                        {level: 0, name: '💪 Элитный Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 10000, baseEffect: 12},
+                        {level: 0, name: '💪 Мастер Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 20000, baseEffect: 25},
+                        {level: 0, name: '💪 Легендарный Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 40000, baseEffect: 50},
+                        {level: 0, name: '💪 Мифический Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 80000, baseEffect: 100},
+                        {level: 0, name: '💪 Божественный Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 150000, baseEffect: 200},
+                        {level: 0, name: '💪 Космический Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 300000, baseEffect: 400},
+                        {level: 0, name: '💪 Квантовый Усилитель', desc: 'Увеличивает количество кликов за тап', currency: 'coins', locked: false, basePrice: 600000, baseEffect: 800}
                     ]
                 },
                 'energy_buy': {
                     name: '⚡ Добавление Энергии',
                     emoji: '⚡',
                     items: [
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false},
-                        {level: 0, name: '⚡ Добавление Энергии', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false}
+                        {level: 0, name: '⚡ Базовый Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 1500, baseEffect: 0.5},
+                        {level: 0, name: '⚡ Улучшенный Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 3500, baseEffect: 1.2},
+                        {level: 0, name: '⚡ Продвинутый Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 7000, baseEffect: 2.5},
+                        {level: 0, name: '⚡ Элитный Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 14000, baseEffect: 5.0},
+                        {level: 0, name: '⚡ Мастер Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 28000, baseEffect: 10.0},
+                        {level: 0, name: '⚡ Легендарный Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 55000, baseEffect: 20.0},
+                        {level: 0, name: '⚡ Мифический Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 110000, baseEffect: 40.0},
+                        {level: 0, name: '⚡ Божественный Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 220000, baseEffect: 80.0},
+                        {level: 0, name: '⚡ Космический Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 440000, baseEffect: 160.0},
+                        {level: 0, name: '⚡ Квантовый Генератор', desc: 'Добавляет энергию в секунду', currency: 'coins', locked: false, basePrice: 880000, baseEffect: 320.0}
                     ]
                 },
                 'energy_expand': {
                     name: '📈 Расширение Энергии',
                     emoji: '📈',
                     items: [
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false},
-                        {level: 0, name: '📈 Расширение Энергии', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false}
+                        {level: 0, name: '📈 Базовое Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 2000, baseEffect: 50},
+                        {level: 0, name: '📈 Улучшенное Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 5000, baseEffect: 120},
+                        {level: 0, name: '📈 Продвинутое Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 10000, baseEffect: 250},
+                        {level: 0, name: '📈 Элитное Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 20000, baseEffect: 500},
+                        {level: 0, name: '📈 Мастер Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 40000, baseEffect: 1000},
+                        {level: 0, name: '📈 Легендарное Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 80000, baseEffect: 2000},
+                        {level: 0, name: '📈 Мифическое Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 160000, baseEffect: 4000},
+                        {level: 0, name: '📈 Божественное Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 320000, baseEffect: 8000},
+                        {level: 0, name: '📈 Космическое Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 640000, baseEffect: 16000},
+                        {level: 0, name: '📈 Квантовое Расширение', desc: 'Расширяет максимальный запас энергии', currency: 'coins', locked: false, basePrice: 1280000, baseEffect: 32000}
                     ]
                 },
                 'autobot': {
@@ -3048,17 +3048,23 @@
                 let nextLevelEffect = 0;
                 
                 if (category === 'tap_boost') {
-                    currentEffect = currentLevel > 0 ? calculateTapBoostEffect(currentLevel) : 0;
-                    nextLevelPrice = calculateTapBoostPrice(currentLevel + 1);
-                    nextLevelEffect = calculateTapBoostEffect(currentLevel + 1);
+                    const baseEffect = item.baseEffect || 1;
+                    const basePrice = item.basePrice || 1000;
+                    currentEffect = currentLevel > 0 ? Math.floor(baseEffect * Math.pow(1.2, currentLevel)) : 0;
+                    nextLevelPrice = Math.floor(basePrice * Math.pow(1.5, currentLevel + 1));
+                    nextLevelEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel + 1));
                 } else if (category === 'energy_buy') {
-                    currentEffect = currentLevel > 0 ? calculateEnergyEffect(currentLevel) : 0;
-                    nextLevelPrice = calculateEnergyPrice(currentLevel + 1);
-                    nextLevelEffect = calculateEnergyEffect(currentLevel + 1);
+                    const baseEffect = item.baseEffect || 0.5;
+                    const basePrice = item.basePrice || 1500;
+                    currentEffect = currentLevel > 0 ? Math.round(baseEffect * Math.pow(1.15, currentLevel) * 100) / 100 : 0;
+                    nextLevelPrice = Math.floor(basePrice * Math.pow(1.4, currentLevel + 1));
+                    nextLevelEffect = Math.round(baseEffect * Math.pow(1.15, currentLevel + 1) * 100) / 100;
                 } else if (category === 'energy_expand') {
-                    currentEffect = currentLevel > 0 ? calculateExpandEffect(currentLevel) : 0;
-                    nextLevelPrice = calculateExpandPrice(currentLevel + 1);
-                    nextLevelEffect = calculateExpandEffect(currentLevel + 1);
+                    const baseEffect = item.baseEffect || 50;
+                    const basePrice = item.basePrice || 2000;
+                    currentEffect = currentLevel > 0 ? Math.floor(baseEffect * Math.pow(1.25, currentLevel)) : 0;
+                    nextLevelPrice = Math.floor(basePrice * Math.pow(1.6, currentLevel + 1));
+                    nextLevelEffect = Math.floor(baseEffect * Math.pow(1.25, currentLevel + 1));
                 }
                 
                 const rarityColors = {
